--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "experimental server for mesto project",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
   "keywords": [
-    "server"
+    "server",
+    "mesto"
   ],
   "author": "aleksey makhov",
   "license": "ISC",
